# GambitEngine

./: .gitignore  Build-Walnut-GambitEngine.lua  CMakeLists.txt  CMakePresets.json  README.md
GambitApp/: Build-GambitEngine-App.lua  imgui.ini
GambitApp/src/: Board.cpp  Board.h  Evaluation.h  GambitApp.cpp  Game.h  Opening.h  Perft.cpp  Precomputation.cpp  Precomputation.h  Renderer.cpp  Renderer.h  Search.h  SerialCommunication.h  Test.h  UCI.cpp  appLogo.h
Walnut/Platform/GUI/Walnut/: ApplicationGUI.cpp  ApplicationGUI.h
Walnut/Platform/GUI/Walnut/Embed/: Gambit-Icon.embed
scripts/: Setup-GambitEngine.bat  pngToEmbed.py
src/: Board.cpp  Board.h  Evaluation.h  Game.h  Helpers.h  MoveGenerator.h  Opening.cpp  Opening.h  Perft.cpp  Perft.h  Precomputation.h  Renderer.cpp  Renderer.h  Search.h  Transposition.cpp  Transposition.h  TranspositionTable.h  UCI.cpp  UCI.h  Zobrist.h  main.cpp
